fix: adjusting tests and documentation
